create rotationmatrix in render function extended README.md added pictures